tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__AnEndtoDeforesta-fLH_QDPRR6mgCK0PL5iWmA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3733844358040426136,
  "prerequisites": [
    1416,
    1707,
    12880365575383562570
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This multiblock is the perfect solution to high-speed tree farming. Do you need wood for charcoal or benzene power? Nuts for seed oil? Leaf blocks for decoration? Look no further!\n\nThe Tree Growth Simulator can farm almost any tree in the game, and produces all the items you would get by chopping it down normally. All this in a compact 3x3x3 cube, without any lag from growing a real tree.\n\nFirst, place any sapling in the controller slot of the multiblock. Then, insert tools appropriate to the part of the tree you want to harvest in an input bus. Give the machine power, turn it on, and be ready to get flooded by the outputs.\n\nDifferent tools are required to gather different parts of the tree:\n - Saw for logs\n - Branch Cutter for saplings\n - Shears for leaves\n - Knife for fruit\nBetter versions of the tools (Chainsaw, Grafter, ...) will increase the yield! Check the tooltip of the controller block for details.\n\nYou can even use multiple different tools together, and the machine will harvest several different products at the same time!\n\nNote that the tools used will slowly lose durability, so for long-term operation you might want to set up some automatic replacement.\n\n[note]While this machine only requires IV, it is quite expensive to make early in the tier. You will need 16 ZPM circuits and some fancy alloys.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "An End to Deforestation",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1416,
    1707,
    12880365575383562570
  ],
  "rewards": [],
  "tasks": []
}
