tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__BateBateChocolat-AAAAAAAAAAAAAAAAAAAH7g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2030,
  "prerequisites": [
    1410,
    12880365575383562570
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Abuela, will you teach us the chocolate song?\nCon mucho gusto\nWill you sing the chocolate song with us?\nGreat, sing along with Abuela!\n\nBate bate chocolate\nBate bate chocolate\nBate bate chocolate\nBate bate chocolate\n\nMix your chocolate, chocolate\nMix your chocolate, chocolate\nBate bate chocolate\nBate bate chocolate",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Bate Bate Chocolate",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1410,
    12880365575383562570
  ],
  "rewards": [],
  "tasks": []
}
