tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__Bendermorebendin-AAAAAAAAAAAAAAAAAAAH9g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2038,
  "prerequisites": [
    17509788580095423501
  ],
  "properties": {
    "auto_claim": false,
    "desc": "When you need plates by the thousands. You can switch between Bending Machine and Forming Press modes with a screwdriver.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Bender more bending",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    17509788580095423501
  ],
  "rewards": [],
  "tasks": []
}
