tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__Bestthingsincesl-AAAAAAAAAAAAAAAAAAAH8A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2032,
  "prerequisites": [
    1416
  ],
  "properties": {
    "auto_claim": false,
    "desc": "When all you have is a machine full of knives, everything starts looking like bread. You can switch between Cutting Machine and Slicing Machine modes with a screwdriver.\n\nBluebine 2019!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Best thing since sliced bread",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1416
  ],
  "rewards": [],
  "tasks": []
}
