tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__BigBeautifulBrew-3SzKMSj0StOAOzVmInDjZQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2951065926510895973,
  "prerequisites": [
    8148220388809046234
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Start your own local brewery with the BBB! You can use it to make tons of potions, obscure alcoholic drinks, or, more likely, industrial quantities of lubricant.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Big Beautiful Brewery",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    8148220388809046234
  ],
  "rewards": [],
  "tasks": []
}
